# flycs_sdk

./: .bumpversion.cfg  .flake8  .gitchangelog.rc  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  input.txt  pyproject.toml  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
docs/: conf.py  custom_operators.rst  flycs_sdk.rst  functions.rst  index.rst  installation.rst  modules.rst  stored_procedures.rst  transformations.rst  triggers.rst  usage.rst  views.rst
docs/examples/: basic.py  custom_operator.py  parametrize_pipeline.py  template_query.py
flycs_sdk/: __init__.py  cli.py  custom_code.py  entities.py  functions.py  pipelines.py  procedures.py  query_base.py  query_base_schema.py  transformations.py  triggers.py  views.py
flycs_sdk/exceptions/: __init__.py  exception.py
tests/: __init__.py  test_custom_code.py  test_entities.py  test_field_config.py  test_flycs_sdk.py  test_functions.py  test_pipeline.py  test_transformation.py  test_trigger.py  test_view.py
