[tool]
[tool.poetry]
authors = ["Tristan Van Thielen <tristan.van.thielen@devoteam.com>"]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
]
description = "Top-level package for Flycs SDK."
homepage = "https://github.com/Fourcast/flycs_sdk"
license = "MIT"
name = "flycs_sdk"
packages = [
  {include = "flycs_sdk"},
  {include = "tests", format = "sdist"},
]
readme = "README.rst"
version = "0.10.3"

[tool.poetry.dependencies]
chardet = "^4.0.0"
python = ">=3.6.2,<3.11"
requirements-parser = "^0.2.0"
"ruamel.yaml" = "^0.16.12"
semver = "^2.13.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
bump2version = "*"
coverage = "*"
deepdiff = "^5.0.2"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
